--- a/views/index.mustache
+++ b/views/index.mustache
@@ -2,88 +2,56 @@
 <html dir="ltr" lang="en-US">
 {{>head}}
 
-<body class="container">
-	<div class="row">
+<body class="container-fluid">
+   <header class="row">
+      <div>
+         <h1>Dog Sitter</h1>
+         <p>Simple web app to connect dog owner with dog sitter</p>
+      </div>
+   </header>
 
-		<div class="col-md-6 col-md-offset-3" style="text-align:center;margin-bottom:48px">
-			<h1>Welcome to Turbo</h1>
-			<hr />
-			<div style="background:#f9f9f9;border:1px solid #ddd;border-radius:3px;padding:12px">
-				You are currently looking at the <strong style="color:red">index.mustache</strong> file in the 'views' directory of your project. This template is rendered with the Mustache templating engine. <span style="color:red">{{text}}</span>
-			</div>
+   <section id="call-to-action" class="row">
+      <div class="col-lg-6">
+         <h2>Everyone is busy. </h2>
+         <p>DogSitter can help you find a sitter to watch you four legged friend when you have some place
+            to be! DogSitter uses trusted and reviewed sitter so that you know you are always getting a reliable dogsitter.</p>
+      </div>
+      <div class="col-lg-6">
+         <h3>Sign Up Today!</h3>
+         <button class="btn btn-primary">Sign Up</button>
+      </div>
+   </section>
 
-			<h3 style="margin-top:48px">Routes</h3>
-			<hr />
-			<p>
-				The routes are stored in the 'routes' directory. This scaffold comes with two sample routes out of the box: index and api. To test each route, click the following links:
-			</p>
+   <section id="sign-up" class="row">
+      <div class="col-lg-12">
+      <h3>Fill the form below to sign up.</h3>
+         <form action="">
+            <div class="input-group mb-2">
+               <input type="text" class="form-control" placeholder="Full Name" aria-label="Full Name" aria-describedby="basic-addon2" name="name" />
+            </div>
+            <div class="input-group mb-2">
+               <input type="email" class="form-control" placeholder="Email Address" aria-label="Email Address" aria-describedby="basic-addon2" name="email" />
+            </div>
+            <div class="input-group mb-2">
+               <input type="password" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="basic-addon2" name="password" />
+            </div>
+            <button class="btn btn-primary">Submit</button>
+         </form>
+      </div>
+   </section>
 
-			<div class="row">
-				<div class="col-md-6 col-md-offset-0">
-					<div style="text-align:left;background:#f9f9f9;border:1px solid #ddd;border-radius:3px;padding:12px">
-						<h4>Index Route</h4>
-						<ul style="padding-left:16px">
-							<li><a href="/json">JSON Response</a></li>
-							<li><a href="/send">Text Response</a></li>
-							<li><a href="/redirect">Redirect</a></li>
-						</ul>
-					</div>
-				</div>
-
-				<div class="col-md-6">
-					<div style="text-align:left;background:#f9f9f9;border:1px solid #ddd;border-radius:3px;padding:12px">
-						<h4>API Route</h4>
-						<ul style="padding-left:16px;">
-							<li><a href="/api/profile">Resource Request</a></li>
-							<li><a href="/api/profile?team=cavaliers">With Query Params</a></li>
-							<li><a href="/api/profile/lebron_james">With ID</a></li>
-						</ul>
-					</div>
-				</div>
-			</div>			
-
-			<h3 style="margin-top:48px">Static Assets</h3>
-			<hr />
-			<p>
-				Static assets (images, js, css, etc) are located in the "public" directory. The image below is rendered from the 'images' directory of the public folder:
-				<br /><br />
-				<img src="/images/turbo.png" />
-				<br /><br />
-				When deployed on Turbo Vertex, static assets are <em>automatically</em> distributed to a global CDN so there is no need to set that up. If you decide to eject and deploy this project on your own architecture, you will have to configure a CDN distribution (or at least you should).
-			</p>
-
-			<h3 style="margin-top:48px">Deployment</h3>
-			<hr />
-			<p>
-				To deploy, connect the project to a Turbo 360 project using the APP_ID (from root directory):
-<pre style="text-align:left;margin-top:8px;background:#333;color:#fff">
-<code>$ turbo app APP_ID</code>
-</pre>
-
-				Then deploy by simply entering the deploy command:
-<pre style="text-align:left;margin-top:8px;background:#333;color:#fff">
-<code>$ turbo deploy</code>
-</pre>
-
-				When deployment is complete, you will see a live link where you can access the project on the internet!
-			</p>
-
-
-		</div>
-	</div>
-
-
-  <!-- Turbo library imports: jQuery, Turbo CDN, sample app.js.
+   <!-- Turbo library imports: jQuery, Turbo CDN, sample app.js.
   NOTE: These should be minified in a build script -->
-  <script type="text/javascript" src="/js/jquery.js"></script>
+   <script type="text/javascript" src="/js/jquery.js"></script>
 
-  <!-- For file uploading. Remove if file upload not necessry -->
-  <script type="text/javascript" src="/js/dropzone.js"></script> 
+   <!-- For file uploading. Remove if file upload not necessry -->
+   <script type="text/javascript" src="/js/dropzone.js"></script>
 
-  <!-- Turbo CDN. Better to use CDN than to store locally. -->
-  <script type="text/javascript" src="https://cdn.turbo360-dev.com/dist/turbo.min.js"></script>
+   <!-- Turbo CDN. Better to use CDN than to store locally. -->
+   <script type="text/javascript" src="https://cdn.turbo360-dev.com/dist/turbo.min.js"></script>
 
-  <!-- Your app specific code -->
-  <script type="text/javascript" src="/js/app.js"></script>
+   <!-- Your app specific code -->
+   <script type="text/javascript" src="/js/app.js"></script>
 </body>
+
 </html>
